--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,11 @@
     },
     "require": {
         "php": ">=5.5.9",
+        "doctrine/data-fixtures": "^1.3",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "1.1",
-        "doctrine/orm": "^2.5",
+        "doctrine/orm": "^2.6.0",
+        "fzaninotto/faker": "^1.8",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
@@ -28,6 +30,7 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
@@ -46,12 +49,6 @@
         "post-update-cmd": [
             "@symfony-scripts"
         ]
-    },
-    "config": {
-        "platform": {
-            "php": "5.6"
-        },
-        "sort-packages": true
     },
     "extra": {
         "symfony-app-dir": "app",
