--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,6 @@
 app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+logout:
+    path: /logout
+
+
