--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,3 +79,6 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
+    registration:
+        form:
+            type: AppBundle\Form\RegistrationType
