--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,6 +20,9 @@ security:
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: ROLE_USER }
+        - { path: ^/new, role: ROLE_USER }
         - { path: ^/admin/, role: ROLE_ADMIN }
+
+
 
